# FinGPT-Summarizer

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml
docs/: embeddings.md  search_flow.md
scripts/: _bootstrap_env.py  check_discovery_page.py  cluster.py  db_counts.py  db_init.py  db_tail.py  e2e_ingest.py  embed.py  run.sh  smoke_scrape.py  summarize.py  test_injestion_smoke.py  test_openai.py  test_summarize.py
src/api/: main.py
src/app/: db.py  models.py  tasks.py
src/clustering/: clusterer.py
src/embeddings/: registry.py  service.py
src/ingestion/: canonicalize.py  crawl_client.py  crawl_fetcher.py  dedup.py  discovery.py  extractor.py  pipeline.py  sources.yaml
src/static/: clusters.html  search.html
src/static/css/: styles.css
src/static/js/: api.js
src/summarization/: llm.py  summarizer.py
src/summarization/prompts/: summarize_news.j2
static/: config.js  search.html
